WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308440
Fix MathML fraction bar not painted when thickness equals width
https://bugs.webkit.org/show_bug.cgi?id=308440
Summary
Fix MathML fraction bar not painted when thickness equals width
Ahmad Saleem
Reported
2026-02-22 13:15:53 PST
ssia - progress WPT
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-22 13:15:59 PST
<
rdar://problem/170934351
>
Ahmad Saleem
Comment 2
2026-02-22 13:17:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59216
EWS
Comment 3
2026-02-22 23:45:35 PST
Committed
308025@main
(a787642717c3): <
https://commits.webkit.org/308025@main
> Reviewed commits have been landed. Closing PR #59216 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug