Fix MathML fraction bar not painted when thickness equals width https://bugs.webkit.org/show_bug.cgi?id=308440 rdar://170934351

Reviewed by Frédéric Wang.

GraphicsContext::drawLine() misidentifies horizontal lines as
vertical when stroke thickness equals the distance between
endpoints. This causes the fraction bar to not render when
FractionRuleThickness produces a thickness equal to the bar
width.

Replace drawLine() with fillRect() to draw the fraction bar
as an explicit rectangle, avoiding the heuristic entirely.

* LayoutTests/TestExpectations: Progressions
* Source/WebCore/rendering/mathml/RenderMathMLFraction.cpp:
(WebCore::RenderMathMLFraction::paint):

Canonical link: https://commits.webkit.org/308025@main